remove faded paragraphs on load

--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -166,7 +166,7 @@
                                             class="fas fa-question" aria-hidden="true"></i></a></span></div>
                         </div>
                         <div class="custom-shiping">
-                            <div [className]="tooltipData ? 'tooltipcontent show' : 'tooltipcontent hide'">
+                            <!-- <div [className]="tooltipData ? 'tooltipcontent show' : 'tooltipcontent hide'">
 
                                 <p (click)="closeTooltip()">
                                 <p class="sec-title" style="font-weight: 700; font-size: 18px;">
@@ -184,7 +184,7 @@
                                     just for having an active subscription.</p>
                                 <p><a (click)="closeTooltip()" class="btnclose">Go Back</a></p>
 
-                            </div>
+                            </div> -->
                             <h3>Customize Shipment</h3>
 
                             <!-- <h3>Customize Shipment <span class="ques-ico"><a href="#"><i class="fas fa-question" aria-hidden="true"></i></a></span></h3> -->
@@ -297,7 +297,7 @@
                             </div>
                         </div>
                         <div class="custom-shiping">
-                            <div [className]="tooltipData ? 'tooltipcontent show' : 'tooltipcontent hide'">
+                            <!-- <div [className]="tooltipData ? 'tooltipcontent show' : 'tooltipcontent hide'">
 
                                 <p (click)="closeTooltip()">
                                 <p class="sec-title" style="font-weight: 700; font-size: 18px;">
@@ -315,7 +315,7 @@
                                     just for having an active subscription.</p>
                                 <p><a (click)="closeTooltip()" class="btnclose">Go Back</a></p>
 
-                            </div>
+                            </div> -->
                             <h3>Customize Shipment</h3>
                             <div class="choose-shipping">
                                 <div class="form-group">
