--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -149,11 +149,10 @@
               <div class="testimonial-wrapper">
                 <div class="content-info-image">
                   <h4>{{reviews.title}}</h4>
-                  <p class="testimonial-text">{{ decodeContent(reviews.content)}}</p>
+                  <p class="testimonial-text">"{{decodeContent(reviews.content)}}"</p>
                   <div class="bottom-stars-info">
                      <div class="star-rating">
                     <ul class="rating-star">
-
                       <li *ngFor='let in of score(reviews.score) ;let i = index'><svg xmlns="http://www.w3.org/2000/svg" width="25.075" height="24" viewBox="0 0 25.075 24">
                        <path id="star-solid" d="M31.692.822,28.631,7.028l-6.848,1a1.5,1.5,0,0,0-.83,2.559l4.954,4.828-1.172,6.819a1.5,1.5,0,0,0,2.175,1.579l6.126-3.22,6.126,3.22a1.5,1.5,0,0,0,2.175-1.579l-1.172-6.819,4.954-4.828a1.5,1.5,0,0,0-.83-2.559l-6.848-1L34.382.822A1.5,1.5,0,0,0,31.692.822Z" transform="translate(-20.5 0.013)" fill="#ffad00"/>
                       </svg>
@@ -188,12 +187,10 @@
                 </div>
               </div>
             </div>
-
           </ng-template>
         </owl-carousel-o>
       </div>
     </div>
-
   </div>
 </section>
 
