--- a/src/app/components/store/checkout/checkout.component.scss
+++ b/src/app/components/store/checkout/checkout.component.scss
@@ -656,3 +656,12 @@ Media Queries
         width: 100%;
     }
 }
+
+
+.invalid-feedback-customclass {
+
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #dc3545;
+}
