--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -71,26 +71,39 @@
                                 </div>
                             </ng-template>
                             <ng-template ngbPanelContent>
-                                <div class="content-card steps-inner promo-checkout">
-                                    <div class="col-md-12 p-0 mb-3">
-                                        <div class="promo-code">
-                                            <div [className]="promocode_onetime ?  'special-field datafilled form-group' : 'special-field dataempty form-group'">
-                                                <input type="text"  [(ngModel)]="promocode_onetime" name="promo-enter" class="form-control" />
-                                                <label class="form-label">Promo Code</label>
-                                                <span class="vali-promo">Not Applied</span>
-                                                <span class="btn-add-promo" [disabled]="isDisabled" (click)="addPromo(); isDisabled = true;">
-                                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                                                        viewBox="0 0 14 14">
-                                                        <path _ngcontent-shj-c146="" id="Path_2014"
-                                                            data-name="Path 2014"
-                                                            d="M207.9,11h-5v5a1,1,0,0,1-2,0V11h-5a1,1,0,0,1,0-2h5V4a1,1,0,0,1,2,0V9h5a1,1,0,0,1,0,2Z"
-                                                            transform="translate(-194.9 -3)"></path>
-                                                    </svg>
-                                                </span>
+                                            <div class="content-card steps-inner shipping-address-form">
+                                                <div class="col-md-12 loyalty-form p-0 mb-3">
+                                                    <div [className]="promocode_onetime ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'">
+                                                        <input type="text" [(ngModel)]="promocode_onetime" class="form-control" name="promo-enter" (focusout)="clearPromo($event)" [ngModelOptions]="{standalone: true}"/>
+                                                        <label class="form-label">Promo Code</label>
+                                                        <span class="vali-promo">{{promocodeMessage}}</span>
+                                                        <span class="btn-add-promo" (click)="addPromo()" *ngIf="addPromoIcon" >
+                
+                                                        <svg xmlns="http://www.w3.org/2000/svg" width="14"
+                                                            height="14" viewBox="0 0 14 14">
+                                                            <path _ngcontent-shj-c146="" id="Path_2014"
+                                                                data-name="Path 2014"
+                                                                d="M207.9,11h-5v5a1,1,0,0,1-2,0V11h-5a1,1,0,0,1,0-2h5V4a1,1,0,0,1,2,0V9h5a1,1,0,0,1,0,2Z"
+                                                                transform="translate(-194.9 -3)"></path>
+                                                        </svg>
+                                                    </span>
+                                                    <span class="btn-add-promo" *ngIf="!addPromoIcon">
+                
+                                                        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24">
+                                                            <defs>
+                                                            <clipPath id="clip-path">
+                                                            <rect width="24" height="24" fill="none"/>
+                                                            </clipPath>
+                                                            </defs>
+                                                            <g id="Icon_Done_Rounded" data-name="Icon / Done / Rounded" opacity="0.5" clip-path="url(#clip-path)">
+                                                            <rect id="Box" width="24" height="24" fill="none"/>
+                                                            <path id="Path_2036" data-name="Path 2036" d="M822.7,13.9l-3.5-3.5a.967.967,0,0,0-1.4,0,.967.967,0,0,0,0,1.4L822,16a.967.967,0,0,0,1.4,0L834,5.4A.967.967,0,0,0,834,4a.967.967,0,0,0-1.4,0Z" transform="translate(-814 2)"/>
+                                                            </g>
+                                                            </svg>
+                                                    </span>
+                                                    </div>
+                                                </div>
                                             </div>
-                                        </div>
-                                    </div>
-                                </div>
                             </ng-template>
                         </ngb-panel>
 
@@ -303,7 +316,7 @@
                             <ng-template ngbPanelTitle>
                                 <div class="heading-step1">
                                     <h4>Promo Code</h4>
-                                    <span class="vali-promo">Not Applied</span>
+                                    <span class="vali-promo"><strong>{{promocode_onetime}} {{promocodeMessage}}</strong></span>
                                     <span class="arrow-stepp">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="6.6" height="11.2"
                                             viewBox="0 0 6.6 11.2">
@@ -315,11 +328,10 @@
                                 </div>
                             </ng-template>
                             <ng-template ngbPanelContent>
-                                <div class="content-card steps-inner promo-checkout">
-                                    <div class="col-md-12 p-0 mb-3">
-                                        <div class="promo-code">
+
+                                <div class="content-card steps-inner shipping-address-form">
                                             <div class="col-md-12 loyalty-form p-0 mb-3">
-                                                <div [className]="promocode_onetime ?  'special-field datafilled form-group ' : 'special-field dataempty form-group'">
+                                                <div [className]="promocode_onetime ?  'special-field datafilled form-group' : 'special-field dataempty form-group'">
                                                     <input type="text" [(ngModel)]="promocode_onetime" class="form-control" name="promo-enter" (focusout)="clearPromo($event)" [ngModelOptions]="{standalone: true}"/>
                                                     <label class="form-label">Promo Code</label>
                                                     <span class="vali-promo" >{{promocodeMessage}}</span>
@@ -349,44 +361,8 @@
                                                     </span>
                                                 </div>
                                             </div>
-                                        </div>
-                                    </div>
                                 </div>
-                                <!-- <div class="other-additional-product" >
-                                    <div class="promo-code" >
-                                      <div
-                                        [className]="
-                                          promocode_onetime
-                                            ? 'special-field datafilled form-group '
-                                            : 'special-field dataempty form-group'
-                                        "
-                                      >
-                                        <input
-                                          type="text"
-                                          [(ngModel)]="promocode_onetime"
-                                          class="form-control"
-                                          (focusout)="clearPromo($event)"
-                                        />
-                                        <label class="form-label">Promo Code</label>
-                                        <button class="btn-add-promo"  (click)="addPromo()">
-                                          <svg
-                                            xmlns="http://www.w3.org/2000/svg"
-                                            width="14"
-                                            height="14"
-                                            viewBox="0 0 14 14"
-                                          >
-                                            <path
-                                              id="Path_2014"
-                                              data-name="Path 2014"
-                                              d="M207.9,11h-5v5a1,1,0,0,1-2,0V11h-5a1,1,0,0,1,0-2h5V4a1,1,0,0,1,2,0V9h5a1,1,0,0,1,0,2Z"
-                                              transform="translate(-194.9 -3)"
-                                            />
-                                          </svg>
-                                        </button>
-                                      </div>
-                                    </div>
-                                  </div> -->
-                            </ng-template>
+                             </ng-template>
                         </ngb-panel>
 
                         <ngb-panel id="otp-sidebar">
