--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -929,7 +929,7 @@
                                                             </div>
                                                             <div class="col-md-12">
                                                                 <div class="form-group">
-                                                                    <input type="number" formControlName="cardNumber"   minlength="14" maxlength="15"  (change)="creditCardValidator($event)" placeholder="Card number" name="cardNumber" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardNumber?.errors }" />
+                                                                    <input type="text" formControlName="cardNumber" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="0000 0000 0000 0000"    (change)="creditCardValidator($event)" placeholder="Card number" name="cardNumber" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardNumber?.errors }" />
                                                                     <div *ngIf="paymentSubmitted && p.cardNumber?.errors" class="invalid-feedback">
                                                                         <div *ngIf="p.cardNumber?.errors.required">Card Number is required</div>
                                                                         <div *ngIf="p.cardNumber.errors.minlength">Card Number must be at least 14 numbers </div>
@@ -943,24 +943,31 @@
                                                         <div class="row">
                                                             <div class="col-6 col-md-3">
                                                                 <div class="form-group">
-                                                                    
-                                                                    <input type="number" formControlName="expiryMonth" placeholder="Month" name="expiryMonth" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryMonth?.errors }" />
+                                                                    <input type="text" formControlName="expiryMonth" [(ngModel)]="checkMonth" (change)="validateCard()" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="00" placeholder="Month" name="expiryMonth" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryMonth?.errors }" />
                                                                     <div *ngIf="paymentSubmitted && p.expiryMonth?.errors" class="invalid-feedback">
                                                                         <div *ngIf="p.expiryMonth?.errors.required">Expiry Month is required</div>
+                                                                        <div *ngIf="p.expiryMonth.errors.pattern">Invalid Month</div>
                                                                     </div>
+                                                                    <div *ngIf="monthError" class="invalid-feedback-customclass">
+                                                                      <div *ngIf="monthError">Month is not valid</div>
+                                                                  </div>
                                                                 </div>
                                                             </div>
                                                             <div class="col-6 col-md-3">
                                                                 <div class="form-group">
-                                                                    <input type="number" formControlName="expiryYear" placeholder="Year" name="expiryYear" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryYear?.errors }" />
+                                                                    <input type="text" formControlName="expiryYear" [(ngModel)]="checkYear" (change)="validateCard()" placeholder="Year" name="expiryYear" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="0000" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.expiryYear?.errors }" />
                                                                     <div *ngIf="paymentSubmitted && p.expiryYear?.errors" class="invalid-feedback">
                                                                         <div *ngIf="p.expiryYear?.errors.required">Expiry Year is required</div>
                                                                     </div>
+                                                                    <div *ngIf="yearError" class="invalid-feedback-customclass">
+                                                                      <div *ngIf="yearError">Year is not valid</div>
+                                                                  </div>
+
                                                                 </div>
                                                             </div>
                                                             <div class="col-md-3">
                                                                 <div class="form-group">
-                                                                    <input type="number" formControlName="cardCVV" placeholder="CVV" name="cardCVV" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardCVV?.errors }" />
+                                                                    <input type="text" formControlName="cardCVV" placeholder="CVV" name="cardCVV" [showMaskTyped]="false" [dropSpecialCharacters]="false" mask="000" class="form-control" [ngClass]="{ 'is-invalid': paymentSubmitted && p.cardCVV?.errors }" />
                                                                     <div *ngIf="paymentSubmitted && p.cardCVV?.errors" class="invalid-feedback">
                                                                         <div *ngIf="p.cardCVV?.errors.required">card CVV is required</div>
                                                                     </div>
