--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -122,23 +122,6 @@
                             </div>
                             <div class="prod-bundle-select">
                                 <h3>Select Bundle</h3>
-                                <!-- <div *ngFor="let bundle of bundles" class="radio-bundle">
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="inlineRadioOptions"
-                      id="{{bundle.id}}"
-                      value="{{bundle.value}}"
-                      (change)="checkBundle(bundle.value,product.price)"
-                      checked
-                    />
-                    <label class="form-check-label" for="{{bundle.id}}"
-                      >{{bundle.name}}</label
-                    >
-                  </div>
-                </div> -->
-
                                 <div class="radio-bundle">
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions" id="1" value="single" (change)="checkBundle('single',product.price)" checked />
@@ -154,21 +137,6 @@
                             </div>
                             <div class="prod-bundle-select mt-0 delivery-radio">
                                 <h3>Select Delivery</h3>
-                                <!-- <div *ngFor="let type of cartTypes; let i = index" class="radio-bundle">
-                  <div class="form-check form-check-inline">
-                    <input
-                      class="form-check-input"
-                      type="radio"
-                      name="inlineRadioOptionsdelivery"
-                      id="{{i}}{{type}}"
-                      value="{{type}}"
-                      (change)="checkDelivery(type)"
-                    />
-                    <label class="form-check-label" for="{{i}}{{type}}"
-                      >{{type == 0 ? 'Single Delivery' : 'Subscribe & Save 15%'}}</label>
-                  </div>
-                </div> -->
-
                                 <div class="radio-bundle">
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptionsdelivery" id="3" value="0" (change)="checkDelivery(0)" />
@@ -205,21 +173,11 @@
                                 <div class="choose-shipping">
                                     <div class="form-group">
                                         <select (change)="quantityForOneTime(product, $event.target.value)" [(ngModel)]="quantityValue" class="form-control">
-                      <option class="dropdown-item" disabled selected value="undefined">Select
-                        Quantity</option>
-                      <option *ngFor="let qty of quantity" [value]="qty.value">
-                        {{qty.name}}
-                      </option>
-                    </select>
-
-
-
-                                        <!-- <select  [ngModel]="quantityValue" class="form-control">
-                      <option class="dropdown-item" disabled selected value="undefined">Select Quantity</option>
-                      <option *ngFor="let tech of quantity" [ngValue]="tech">
-                       {{ tech.name }}
-                      </option>
-                    </select> -->
+                                        <option *ngFor="let qty of quantity" [value]="qty.value"   [selected]="qty.value === quantityValue">
+                                            {{qty.name}}
+                                        </option>
+                                        </select>
+                                    
 
                                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.171 4.6">
                       <path id="Path_2028" data-name="Path 2028"
