quantity . promo code, product detail page issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -1779,9 +1779,17 @@ section.reviews-yotpo yotpo-reviews-widget h2.yotpo-main-title {
         max-width: 100%;
         flex: none;
     }
-    section.product-gallery .full-width:last-child {
-        display: none;
+  
+    section.product-gallery {
+        position: relative;
+        margin-bottom: 620px;
     }
+    
+    section.product-gallery .banner_products-slides+.full-width {position: absolute;bottom: -610px;left: 50%;transform: translateX(-50%);}
+    
+    section.product-gallery .banner_products-slides+.full-width .model-productview {    box-shadow: 0 0 15px #ab9f9fab;}
+
+
     .banner-ads {
         margin-top: 30px !important;
     }
@@ -1878,6 +1886,10 @@ section.reviews-yotpo yotpo-reviews-widget h2.yotpo-main-title {
 }
 
 @media (max-width: 767px) {
+
+    section.product-gallery .banner_products-slides+.full-width {
+        bottom: -590px;
+    }
    
     .r-listing-head .media-body .r-date-post {
         display: none;
@@ -1944,6 +1956,11 @@ section.reviews-yotpo yotpo-reviews-widget h2.yotpo-main-title {
     }
 }
 
+@media (max-width:480px) {
+    section.product-gallery .banner_products-slides+.full-width {
+        bottom: -620px;
+    }
+}
 @media (max-width: 575px) {
     ngb-modal-window.prodview-modal .modal-dialog {
         margin: 25px auto 0;
