--- a/src/app/components/store/search_product/searchproduct/searchproduct.component.html
+++ b/src/app/components/store/search_product/searchproduct/searchproduct.component.html
@@ -32,7 +32,7 @@
           <img [src]="product.image_03" class="card-img-top" alt="products-sample" />
           <div class="card-body">
             <div class="product-details">
-              <h5 class="card-title">{{ product.itemDescription }}</h5>
+              <h5 class="card-title">{{ product?.itemDescription }}</h5>
               <h6 class="small">Perfect for ages 3+</h6>
               <div class="reviews-product">
 
