--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -124,13 +124,13 @@
                                 <h3>Select Bundle</h3>
                                 <div class="radio-bundle">
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="1" value="single" (change)="checkBundle('single',product.price)" checked />
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="1" value="single" (change)="checkBundle('single',product?.price)" checked />
                                         <label class="form-check-label" for="1">Single</label>
                                     </div>
                                 </div>
                                 <div class="radio-bundle">
                                     <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="2" value="multiple" (change)="checkBundle('multiple',product.price)" />
+                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="2" value="multiple" (change)="checkBundle('multiple',product?.price)" />
                                         <label class="form-check-label" for="2">2-pk (Save 5%)</label>
                                     </div>
                                 </div>
@@ -172,8 +172,9 @@
                                 </h3>
                                 <div class="choose-shipping">
                                     <div class="form-group">
-                                        <select (change)="quantityForOneTime(product, $event.target.value)" [(ngModel)]="quantityValue" class="form-control">
-                                        <option *ngFor="let qty of quantity" [value]="qty.value"   [selected]="qty.value === quantityValue">
+                                        <select (change)="quantityForOneTime(product, $event.target.value)" class="form-control">
+                                            <option [value]="undefined" selected="true">Select</option>
+                                        <option *ngFor="let qty of quantity" [value]="qty.value">
                                             {{qty.name}}
                                         </option>
                                         </select>
