promo code issue fix

--- a/src/app/components/store/checkout/checkout.component.html
+++ b/src/app/components/store/checkout/checkout.component.html
@@ -316,7 +316,7 @@
                             <ng-template ngbPanelTitle>
                                 <div class="heading-step1">
                                     <h4>Promo Code</h4>
-                                    <span class="vali-promo"><strong>{{promocode_onetime}} {{promocodeMessage}}</strong></span>
+                                    <span class="vali-promo"><strong>{{code}}</strong> {{promocodeMessage}}</span>
                                     <span class="arrow-stepp">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="6.6" height="11.2"
                                             viewBox="0 0 6.6 11.2">
