custom drop down changes

--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -146,7 +146,7 @@
                           <!-- <h3>Customize Shipment <span class="ques-ico"><a href="#"><i class="fas fa-question" aria-hidden="true"></i></a></span></h3> -->
                           <div class="choose-shipping">
                               <div class="form-group">
-                                  <select (change)="quantityForOneTime(productDetail, $event.target.value)"
+                                  <select id="islectedvalchanged" (change)="quantityForOneTime(productDetail, $event.target.value)"
                                        class="form-control">
                                       <option class="dropdown-item" disabled selected value="undefined">Select
                                           Quantity</option>
@@ -154,7 +154,6 @@
                                           {{qty.name}}
                                       </option>
                                   </select>
-
                                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7.171 4.6">
                                       <path id="Path_2028" data-name="Path 2028"
                                           d="M342.6,9.4l2.6,2.6a.967.967,0,0,0,1.4,0l2.6-2.6a1,1,0,0,0-.7-1.7h-5.2A1,1,0,0,0,342.6,9.4Z"
@@ -162,7 +161,7 @@
                                   </svg>
                               </div>
                               <div *ngIf="showSubscription" class="form-group">
-                                  <select (change)="getYearValue($event.target.value)" class="form-control">
+                                  <select  (change)="getYearValue($event.target.value)" class="form-control">
                                       <!-- <option class="dropdown-item" disabled value="undefined">Select</option>     -->
                                       <option [value]="undefined" selected="true">Select</option>
                                       <option *ngFor="let year of years" [value]="year.value">
