--- a/src/app/components/store/shop/shop.component.html
+++ b/src/app/components/store/shop/shop.component.html
@@ -219,7 +219,7 @@
                 </h3>
                 <div class="choose-shipping">
                   <div class="form-group">
-                    <select  (change)="quantityForOneTime(product, $event.target.value)"
+                    <select id="islectedval"  (change)="quantityForOneTime(product, $event.target.value)"
                       class="form-control">
                         <option class="dropdown-item" disabled selected  value="undefined">Select
                         Quantity</option>
