--- a/src/app/components/store/product-detail/product-detail.component.html
+++ b/src/app/components/store/product-detail/product-detail.component.html
@@ -122,7 +122,7 @@
                                           class="fas fa-question" aria-hidden="true"></i></a></span></div>
                       </div>
                       <div class="custom-shiping">
-                          <!-- <div [className]="tooltipData ? 'tooltipcontent show' : 'tooltipcontent hide'">
+                           <div [className]="tooltipData ? 'tooltipcontent show' : 'tooltipcontent hide'">
 
                               <p (click)="closeTooltip()">
                               <p class="sec-title" style="font-weight: 700; font-size: 18px;">
@@ -140,14 +140,14 @@
                                   just for having an active subscription.</p>
                               <p><a (click)="closeTooltip()" class="btnclose">Go Back</a></p>
 
-                          </div> -->
+                          </div>
                           <h3>Customize Shipment</h3>
 
                           <!-- <h3>Customize Shipment <span class="ques-ico"><a href="#"><i class="fas fa-question" aria-hidden="true"></i></a></span></h3> -->
                           <div class="choose-shipping">
                               <div class="form-group">
-                                  <select id="islectedvalchanged" (change)="quantityForOneTime(productDetail, $event.target.value)"
-                                       class="form-control">
+                                  <select id="islectedvalchanged"  [ngModel]="productDetail.quantityModel>10?'11':productDetail.quantityModel" (ngModelChange)="productDetail.quantityModel=$event" (change)="quantityForOneTime(productDetail, $event.target.value)"
+                                       class="form-control hidedropdownfeild">
                                       <option class="dropdown-item" disabled selected value="undefined">Select
                                           Quantity</option>
                                       <option *ngFor="let qty of quantity" [value]="qty.value">
@@ -176,11 +176,11 @@
                               </div>
                           </div>
                           <div class="custom-field">
-                              <input type="number" id="showinput{{productDetail.itemCode}}"
+                              <input type="number"  id="showinput{{productDetail.itemCode}}"
                                   [(ngModel)]="productDetail.extraQuantity"
-                                  *ngIf="productDetail?.quantityModel == '11'  || productDetail?.extraQuantity !=null"
+                                  *ngIf="productDetail?.quantityModel >10  || productDetail?.extraQuantity !=null"
                                   (change)="quantitychanged(productDetail, $event.target.value)"
-                                  class="form-control" />
+                                  class="form-control   hideiputfeild" />
                           </div>
                       </div>
                       <div class="cart-btn">
