--- a/src/app/components/auth/sign-up/sign-up.component.html
+++ b/src/app/components/auth/sign-up/sign-up.component.html
@@ -69,7 +69,7 @@
               </div>
             </div>
             <div class="form-group mb-3">
-              <input type="text" placeholder="Birthday" class="form-control" readonly="readonly"
+              <input type="text" placeholder="Birthday" (bsValueChange)="verifyDate('DateOfBirth')" class="form-control" readonly="readonly"
                 [ngClass]="{ 'is-invalid': submitted && f.dateOfBirth.errors }" bsDatepicker [maxDate]="maxDate"
                 [bsConfig]="{ isAnimated: true, adaptivePosition: true, selectFromOtherMonth: true  }"
                 formControlName="dateOfBirth">
